--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
 body {
   background-color: #c9b5ab;
 }
+
+h1 {
+  color: #3f1622;
+}
+
+li, a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #8f2440;
+}
+
+figcaption {
+  font-style: italic;
+  line-height: 1.5em;
+}
