--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,13 @@ li, a {
 figcaption {
   font-style: italic;
   line-height: 1.5em;
+  color: #222;
+}
+
+h2 {
+  color: #3f1622;
+}
+
+ol, li {
+  list-style-type: lower-greek;
 }
