--- a/css/main.css
+++ b/css/main.css
@@ -1,76 +1,22 @@
 html {
-  font-family: 'PT Serif'(regular) ;
+  font-family: 'PT Sans';
+  box-sizing: border-box;
 }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 body {
-  font-weight: normal;
-  background-color: #c9b5ab;
-}
-h1{
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'PT Serif', sans-serif;
   font-weight: bolder;
   line-height: 1.5;
+  background-color: #c9b5ab;
+  font-weight: normal;
+}
+
+h1 {
   color: #3f1622;
-
-  line-height: 1.5rem;
-}
-nav {
-  font-size: "PT sans"
-}
-nav > ol {
-  list-style-type: none;
-  font-family: 'PT Sans', sans-serif;
-}
-nav  a {
-  font-weight: bolder;
-  color : #8f2440;
-  text-decoration: none;
-}
-h2 {
-  font-weight: 300;
-  font-size: 1.125rem;
-  color: #3f1622;
-
-}
-.to {
-font-family: 'PT Serif', serif;
-font-weight: bolder;
-font-size: 1.5rem;
-text-align: left;
-}
-p {
-  font-family: 'PT Serif', serif;
-  font-size: 1.25rem;
-}
-blockquote {
-font-family: 'PT Serif', serif;
-font-style: italic;
-max-width: 30rem;
-font-size: 1.5rem;
-}
-cite {
-  font-size: 0.8rem;
-}
-
-h3 {
-  font-size: 0.8rem;
-}
-ol {
-  order: "alphabetic"
-}
-dl dd {
-  font-style: "PT sans"(bold)
-}
-.Red {
-  color : #8f2440;
-}
-main {
-  font-family: 'PT Serif', serif;
-}
-figure figcaption {
-  text-align: center;
-}
-p cite {
-  font-size:
 }
 
 li, a {
@@ -86,10 +32,22 @@ figcaption {
   color: #222;
 }
 
+figure figcaption {
+  text-align: center;
+}
+
+h2 {
+  color: #3f1622;
+}
+
 .common {
   list-style-type: lower-greek;
 }
 
 h2, ul, li {
   list-style-type: circle;
+}
+
+a:hover {
+  color: none;
 }
